@@ -1,5 +1,8 @@
 2013-09-25  Doug Evans  <dje@google.com>
 
+	* symtab.c (domain_name, search_domain_name): New functions.
+	* symtab.h (domain_name, search_domain_name): Declare.
+
 	* symfile.h (struct quick_symbol_functions): Reorg arg list of
 	map_matching_symbols so objfile is first.  All uses updated.
 	* dwarf2read.c (dw2_map_matching_symbols): Update signature.
